tdf#96821 fix corner cases for Calc function ROUND.

For very large integer numbers, e.g. 2^52+1, ROUND produced incorrect
results because rtl::math::round uses
floor( number + 0.5 + small_correction_value ), which reduces the maximum
possible mantissa resolution.

Change-Id: I1769c9939a3d6118d3bfbfdf8e41dd4619997232